:bug: feature/SRM-255 Fix: modals close when the scrollbar is clicked

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -304,6 +304,33 @@ table,
     }
 }
 
+@media (max-width: 767.98px) {
+    .modal-fullscreen-md-down {
+        width: 100vw;
+        max-width: none;
+        height: 100%;
+        margin: 0;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .modal-fullscreen-lg-down {
+        width: 100vw;
+        max-width: none;
+        height: 100%;
+        margin: 0;
+    }
+}
+
+@media (max-width: 1199.98px) {
+    .modal-fullscreen-xl-down {
+        width: 100vw;
+        max-width: none;
+        height: 100%;
+        margin: 0;
+    }
+}
+
 .nav-link.disabled {
     opacity: 0.15;
 }
